@@ -1,3 +1,7 @@
+2013-11-26  Niibe Yutaka  <gniibe@fsij.org>
+
+	* rules.mk (OUTFILES) [ENABLE_OUTPUT_HEX]: Add hex generation.
+
 2013-11-21  Niibe Yutaka  <gniibe@fsij.org>
 
 	* example-cdc/usb_stm32f103.c, example-cdc/usb_lld.h: Update from
